--- a/css/style.css
+++ b/css/style.css
@@ -123,27 +123,17 @@ main section.section1{
     background-size: cover;
     width: 100%;
     height: 40vh;
-    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items:end;
     position: relative;
     z-index: -2;
+    text-align: center;
+    font-size: 1.3rem;
    
        
 }
 
-main section.section1 div {
-    position: absolute;
-    bottom: 2%;
-    left: 30%;
-    color: rgb(0, 0, 0);
-    font-size: 35px;
-    text-align: center;
-    font-weight: bold;
-    z-index: 0;
-}
-main section.section1 div h2{
-    margin-top: -35px;
-   
-}
 /* sutunları ayarlama */
 main section.container{
     display: flex;
